4.kubernetes-network/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gb
  labels:
    app.gb: psql
    app.gb: redmine
